feat: show server update status in settings
